added movie controller and mock database. added operationIds for /movie and /movie/{id} to link to controller methods
