# api/swagger/swagger.yaml
@@ -22,6 +22,7 @@ paths:
     # binds a127 app logic to a route
     x-swagger-router-controller: movie
     get:
+      operationId: getAll
       description: Get the movies list
       responses:
         "200":
@@ -35,6 +36,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
+      operationId: save
       description: add a new movie to the list
       parameters:
         - name: title
@@ -55,6 +57,7 @@ paths:
   /movie/{id}:
     x-swagger-router-controller: movie
     get:
+      operationId: getOne
       description: get a movie
       parameters:
         - name: id
@@ -70,7 +73,8 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    put:
+    post:
+      operationId: update
       description: update a movie
       parameters:
         - name: id
@@ -94,6 +98,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
+      operationId: delMovie
       description: delete a movie
       parameters:
         - name: id
